update response for backend and include save for jwt at react app.

--- a/web-frontend/src/resources/pages/auth/auth.css
+++ b/web-frontend/src/resources/pages/auth/auth.css
@@ -115,7 +115,7 @@ form .input-con {
     color: #8d43d2;
 }
 
-.text-con .forgot {
+.text-con .help {
     font-size: 13px;
     color: #939396;
     cursor: pointer;
