--- a/web-frontend/src/resources/pages/dashboard/navbar.css
+++ b/web-frontend/src/resources/pages/dashboard/navbar.css
@@ -1,10 +1,13 @@
 header {
+    position: relative;
     display: flex;
     float: left;
     width: 100%;
     height: 65px;
     box-shadow: 0 0 10px rgba(100, 100, 100, 0.3);
     box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(8px);
 }
 
 /* Left */
@@ -164,5 +167,11 @@ header .h-right {
 .avatar-background img:hover {
     opacity: 0.75;
     /* Todo: show avatar greater and other infos. */
+}
+
+.avatar-background img:hover ~ .profile-container {
+    visibility: visible;
+    opacity: 1;
+    transition: .6s all;
 }
 
