--- a/web-frontend/src/resources/pages/dashboard/navbar.css
+++ b/web-frontend/src/resources/pages/dashboard/navbar.css
@@ -1,5 +1,8 @@
 header {
-    position: relative;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    position: absolute;
     display: flex;
     float: left;
     width: 100%;
