--- a/web-frontend/src/resources/pages/dashboard/sidebar.css
+++ b/web-frontend/src/resources/pages/dashboard/sidebar.css
@@ -38,6 +38,7 @@
     height: 20px;
     width: 100%;
     background: #fff;
+    transition: .6s all;
 }
 
 .side-bar ul li .active b:nth-child(1):before {
@@ -49,6 +50,7 @@
     height: 100%;
     border-bottom-right-radius: 25px;
     background: rgba(141, 67, 210, 1);
+    transition: .6s all;
 }
 
 .side-bar ul li .active b:nth-child(2) {
@@ -57,6 +59,7 @@
     height: 20px;
     width: 100%;
     background: #fff;
+    transition: .6s all;
 }
 
 .side-bar ul li .active b:nth-child(2):before {
@@ -68,10 +71,7 @@
     height: 100%;
     border-top-right-radius: 25px;
     background: rgba(141, 67, 210, 1);
-}
-
- {
-    display: block;
+    transition: .6s all;
 }
 
 .side-bar ul li .side-link {
