--- a/web-frontend/src/resources/pages/dashboard/dashboard.css
+++ b/web-frontend/src/resources/pages/dashboard/dashboard.css
@@ -2,11 +2,12 @@
     display: flex;
     float: left;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     box-sizing: border-box;
     padding: 20px 20px 20px 100px;
     transition: .6s all;
-    gap: 25px
+    gap: 25px;
+    flex-wrap: wrap;
 }
 
 .side-bar-open ~ .main-container {
@@ -67,7 +68,7 @@
     width: 100%;
     height: 10%;
     box-sizing: border-box;
-    background: #c843d2;
+    background: #c9c4c4;
 }
 
 .card-footer-blank {
